# puka

./: .env.example  .envrc  .gitignore  .iex.exs  .pnp.js  .pre-commit-config.yaml  AGENTS.md  LICENSE  Procfile  README.md  bb.edn  build.clj  build.tgz  conftest.py  craco.config.js  deps.edn  devenv.nix  flake.nix  justfile  manage.py  mix.exs  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  schema.graphql  setup.cfg  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: main.yml
.zed/: settings.json  tasks.json
api/: .env.example  Pipfile  manage.py
api/bookmarks/: models.py  schema.py
api/bookmarks/migrations/: 0001_initial.py  0002_auto_20210204_1624.py  0003_auto_20210205_1342.py
api/puka/: schema.py  settings.py  urls.py  wsgi.py
api/users/: schema.py
assets/: base.css  base.js  favicon.iconsproj  heroicons.js  puka-brandmark.af  puka-logo.af
assets/css/: app.css
assets/js/: app.js
bookmarks/: admin.py  models.py  schema.py  tests.py
bookmarks/fixtures/: legacy.json
bookmarks/management/commands/: load_pocket.py
bookmarks/migrations/: 0002_auto_20210204_1624.py  0004_auto_20210317_1558.py
config/: asgi.py  config.exs  dev.exs  prod.exs  runtime.exs  test.exs  urls.py
config/settings/: base.py  local.py  production.py  test.py
lib/: css-js.nix  manage.nix  module.nix  overrides-puka.nix  puka.ex  puka_web.ex  static.nix
lib/mix/tasks/: puka.import.ex
lib/puka/: accounts.ex  application.ex  bookmarks.ex  mailer.ex  paginator.ex  repo.ex  tags.ex
lib/puka/accounts/: scope.ex  user.ex  user_notifier.ex  user_token.ex
lib/puka/bookmarks/: bookmark.ex
lib/puka/tags/: tag.ex
lib/puka_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
lib/puka_web/components/: core_components.ex  custom_components.ex  layouts.ex
lib/puka_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex  user_session_controller.ex
nix/: devshell.nix  formatter.nix  manage.nix  module.nix  overrides-puka.nix  package.nix
nix/checks/: pre-commit.nix  puka-integration-tests.nix  tests.py
nix/lib/: default.nix
nix/lib/overrides/: overrides-psycopg.nix
nix/modules/nixos/: puka.nix
priv/repo/: seeds.exs
priv/repo/migrations/: 20260214003750_create_bookmarks.exs  20260214010657_create_tags.exs  20260214142940_create_users_auth_tables.exs
public/: index.html
puka/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
puka/bookmarks/: admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
puka/bookmarks/migrations/: 0001_initial.py  0002_title_description_search_trigger.py  0003_alter_bookmark_options_and_more.py  0003_alter_bookmark_options_and_more_squashed_0009_alter_bookmark_options.py  0004_bookmark_active.py  0005_bookmark_bookmarks_b_created_9a00a6_idx.py  0006_alter_bookmark_url.py  0007_remove_bookmark_bookmarks_b_tags_65d16c_gin_and_more.py  0008_bookmark_tags.py  0009_alter_bookmark_options.py
puka/bookmarks/tests/: conftest.py  models_test.py  views_test.py
puka/core/: admin.py  apps.py  context_processors.py  filters.py  forms.py  models.py  views.py
puka/core/templatetags/: utils.py
puka/middleware/: debug.py
puka/settings/: base.py  common.py  development.py  local.py  production.py  test.py
puka/static/: design.html  manifest.webmanifest
puka/static/css/: base.css  main.css  main.min.css
puka/static/js/: _hyperscript_w9y.min.js.map  class-tools.js  debug.js
puka/static/puka/: base.css
puka/stuff/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
puka/stuff/migrations/: 0001_initial.py  0002_item_search_trigger.py  0002_remove_product_category_product_tags_delete_category.py  0003_product_name_notes_search.py  0004_name_notes_search_trigger.py
puka/stuff/views/: bookmark.py  item.py  location.py
puka/templates/: 404.html  base.html  bookmarks.html  index.html  overview.html  root.html  sidebar.html
puka/templates/bookmarks/: _bookmark_list.html  _detail_page.html  _edit_form.html  base.html  (+13 more)
puka/upkeep/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
puka/users/: admin.py  models.py  urls.py  views.py
resources/migrations/: 20260110014959-create-bookmarks.down.sql  20260110014959-create-bookmarks.up.sql  20260110172252-import-bookmarks.edn
script/: .config  README.md  bootstrap  clean  server  update
src/: Root.tsx  cache.ts  config.less  data_readers.cljc  index.tsx  react-app-env.d.ts  theme.tsx
src/pages/: Bookmarks.tsx  Home.tsx  index.tsx  pages.less
src/puka/: main.clj
test/: test_helper.exs
test/puka/: accounts_test.exs  bookmarks_tags_test.exs  bookmarks_test.exs  main_test.clj  tags_test.exs
test/puka_web/: user_auth_test.exs
test/support/: conn_case.ex  data_case.ex
tests/: conftest.py  factories.py
tests/bookmarks/: models_test.py  views_test.py
tests/stuff/: item_form_test.py  item_model_test.py  item_views_test.py  location_model_test.py  models_test.py  product_model_test.py  services_test.py
tests/upkeep/: models_test.py  search_test.py  services_test.py
web/: package-lock.json  package.json  tsconfig.json
web/public/: index.html
web/src/: Root.tsx  index.tsx
(+129 files in other folders)
