[project]
name = "puka"
version = "3.0.3"
description = "Where evything finds its place."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.4",
    "django-crispy-forms>=2.3",
    "django-htmx>=1.21.0",
    "environs[django]>=11.2.1",
    "gunicorn>=23.0.0",
    "psycopg[c,pool]>=3.2.3",
    "whitenoise>=6.8.2",
]

[project.scripts]
puka-manage = "puka.manage:main"

[dependency-groups]
dev = [
    "djade>=1.3.2",
    "django-debug-toolbar>=4.4.6",
    "django-stubs[compatible-mypy]>=5.1.1",
    "ipython>=8.30.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest-django>=4.9.0",
    "rich>=13.9.4",
    "ruff>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["puka"]
python_files = "*_test.py"
DJANGO_SETTINGS_MODULE = "puka.settings.test"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "puka.settings.test"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
